# lancerdecode

./: CMakeLists.txt  LICENSE  README.md  example.c
include/: lancerdecode.h
src/: autoload.c  flac.c  formats.h  hashmap.c  hashmap.h  libopusfile.c  libopusfile.h  logging.c  logging.h  mp3.c  options.h  opus.c  pcmstream.c  pcmstream.h  properties.c  properties.h  riff.c  sbuffer.c  stream.c  vorbis.c
src/formats/: flac.c  libopusfile.c  mp3.c  opus.c  riff.c  stb_vorbis.c  vorbis.c
